--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -82,6 +82,26 @@
           <source>runtime error</source>
           <target state="new">runtime error</target>
         </trans-unit>
+        <trans-unit id="Clear.Label" translate="yes" xml:space="preserve">
+          <source>Clear</source>
+          <target state="new">Clear</target>
+        </trans-unit>
+        <trans-unit id="MemoryState.Label" translate="yes" xml:space="preserve">
+          <source>Memory state</source>
+          <target state="new">Memory state</target>
+        </trans-unit>
+        <trans-unit id="PlayButton.Label" translate="yes" xml:space="preserve">
+          <source>Play</source>
+          <target state="new">Play</target>
+        </trans-unit>
+        <trans-unit id="Undo.Label" translate="yes" xml:space="preserve">
+          <source>Undo</source>
+          <target state="new">Undo</target>
+        </trans-unit>
+        <trans-unit id="Restart.Label" translate="yes" xml:space="preserve">
+          <source>Restart</source>
+          <target state="new">Restart</target>
+        </trans-unit>
       </group>
     </body>
   </file>
