Added console clear screen button

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -102,6 +102,10 @@
           <source>Restart</source>
           <target state="new">Restart</target>
         </trans-unit>
+        <trans-unit id="Clrscr.Label" translate="yes" xml:space="preserve">
+          <source>Clear screen</source>
+          <target state="new">Clear screen</target>
+        </trans-unit>
       </group>
     </body>
   </file>
