--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -143,6 +143,35 @@
           <source>Warning</source>
           <target state="translated">Attenzione</target>
         </trans-unit>
+        <trans-unit id="Position" translate="yes" xml:space="preserve">
+          <source>Position</source>
+          <target state="new">Position</target>
+          <note from="MultilingualBuild" annotates="source" priority="2">The position of a wrong operator in a source code</note>
+        </trans-unit>
+        <trans-unit id="BreakpointReached" translate="yes" xml:space="preserve">
+          <source>Breakpoint reached</source>
+          <target state="new">Breakpoint reached</target>
+        </trans-unit>
+        <trans-unit id="ErrorLocation" translate="yes" xml:space="preserve">
+          <source>Error location</source>
+          <target state="new">Error location</target>
+        </trans-unit>
+        <trans-unit id="ErrorType" translate="yes" xml:space="preserve">
+          <source>Error type</source>
+          <target state="new">Error type</target>
+        </trans-unit>
+        <trans-unit id="SourceCode" translate="yes" xml:space="preserve">
+          <source>Source code</source>
+          <target state="new">Source code</target>
+        </trans-unit>
+        <trans-unit id="StackTrace" translate="yes" xml:space="preserve">
+          <source>Stack trace</source>
+          <target state="new">Stack trace</target>
+        </trans-unit>
+        <trans-unit id="Stats" translate="yes" xml:space="preserve">
+          <source>Statistics</source>
+          <target state="new">Statistics</target>
+        </trans-unit>
       </group>
     </body>
   </file>
