--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -151,4 +151,13 @@
   <data name="SingleLoop" xml:space="preserve">
     <value>1 ciclo annidato</value>
   </data>
+  <data name="LowercaseAtPosition" xml:space="preserve">
+    <value>in posizione</value>
+  </data>
+  <data name="LowercaseOperators" xml:space="preserve">
+    <value>operatori</value>
+  </data>
+  <data name="LowercaseSingleOperator" xml:space="preserve">
+    <value>1 operatore</value>
+  </data>
 </root>
