Added ability to repeat the last console script

--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -160,4 +160,7 @@
   <data name="LowercaseSingleOperator" xml:space="preserve">
     <value>1 operatore</value>
   </data>
+  <data name="RepeatScript.Label" xml:space="preserve">
+    <value>Ripeti ultimo script</value>
+  </data>
 </root>
