--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -203,7 +203,7 @@
         </trans-unit>
         <trans-unit id="RepeatScript.Label" translate="yes" xml:space="preserve">
           <source>Repeat last script</source>
-          <target state="new">Repeat last script</target>
+          <target state="translated">Ripeti ultimo script</target>
         </trans-unit>
       </group>
     </body>
