--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -265,7 +265,13 @@
   <data name="LowercaseSingleOperator" xml:space="preserve">
     <value>1 operator</value>
   </data>
+  <data name="ContinueButton.Title" xml:space="preserve">
+    <value>Continue</value>
+  </data>
   <data name="RepeatScript.Label" xml:space="preserve">
     <value>Repeat last script</value>
+  </data>
+  <data name="SkipButton.Title" xml:space="preserve">
+    <value>Skip</value>
   </data>
 </root>
