Indentation indicators UI tweaks, added the template database

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -207,11 +207,11 @@
         </trans-unit>
         <trans-unit id="ContinueButton.Title" translate="yes" xml:space="preserve">
           <source>Continue</source>
-          <target state="new">Continue</target>
+          <target state="translated">Continua</target>
         </trans-unit>
         <trans-unit id="SkipButton.Title" translate="yes" xml:space="preserve">
           <source>Skip</source>
-          <target state="new">Skip</target>
+          <target state="translated">Salta</target>
         </trans-unit>
       </group>
     </body>
