--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -257,6 +257,14 @@
           <source>Run</source>
           <target state="new">Run</target>
         </trans-unit>
+        <trans-unit id="SaveAsButton.Label" translate="yes" xml:space="preserve">
+          <source>Save as</source>
+          <target state="new">Save as</target>
+        </trans-unit>
+        <trans-unit id="SaveButton.Label" translate="yes" xml:space="preserve">
+          <source>Save</source>
+          <target state="new">Save</target>
+        </trans-unit>
       </group>
     </body>
   </file>
